Tidied up files

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [PARAMETERS]
-batchsizes = [16]
-iterations = 3
+batchsizes = [1, 8, 16, 128]
+iterations = 5
 
 [MODELS]
-alexnet = 			0
+alexnet = 			1
 densenet = 			0
 googlenet = 		0
 resnet = 			0
@@ -17,10 +17,10 @@ visiontransformer = 0
 [DATASETS]
 imagenet1000 = 0
 imagenette = 1
-imagewoof = 0
+imagewoof = 1
 
 [PRUNING]
-degrees = [0.3]
+degrees = [0]
 d1 = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 d2 = [0.125, 0.25, 0.3, 0.375, 0.4, 0.5, 0.6, 0.625, 0.75, 0.8, 0.825, 0.9]
 
@@ -28,7 +28,7 @@ d2 = [0.125, 0.25, 0.3, 0.375, 0.4, 0.5, 0.6, 0.625, 0.75, 0.8, 0.825, 0.9]
 random = 0
 lnstructured = 0
 l1unstructured = 0
-l1unstructuredglobal = 1
+l1unstructuredglobal = 0
 
 [LN_PRUNING]
 dim = 1
@@ -45,6 +45,7 @@ int8 = 1
 fp16 = 1
 base = 1
 
-[TRT_FILEFOLDER]
-path = ./data/trt_caches
+[FILEFOLDERS]
+trt_caches = ./data/trt_caches
+experiments = ./data/experiments
 
