Added final versions of files
Because HPI Servers have been down for ages

--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,18 @@
 [PARAMETERS]
-batchsizes = [1, 8, 16, 128]
-iterations = 5
+batchsizes = [8, 16, 64, 128]
+iterations = 3
 
 [MODELS]
 alexnet = 			1
-densenet = 			0
-googlenet = 		0
-resnet = 			0
-inceptionv3 = 		0
+densenet = 			1
+googlenet = 		1
+resnet = 			1
+inceptionv3 = 		1
 mobilenetv2 = 		1
-shufflenetv2 = 		0
-simplenet = 		0
-squeezenet = 		0
-visiontransformer = 0
+shufflenetv2 = 		1
+simplenet = 		1
+squeezenet = 		1
+visiontransformer = 1
 
 [DATASETS]
 imagenet1000 = 0
@@ -20,15 +20,13 @@ imagenette = 1
 imagewoof = 1
 
 [PRUNING]
-degrees = [0]
-d1 = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
-d2 = [0.125, 0.25, 0.3, 0.375, 0.4, 0.5, 0.6, 0.625, 0.75, 0.8, 0.825, 0.9]
+degrees = [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
 
 [PRUNERS]
 random = 0
 lnstructured = 0
 l1unstructured = 0
-l1unstructuredglobal = 0
+l1unstructuredglobal = 1
 
 [LN_PRUNING]
 dim = 1
@@ -41,9 +39,9 @@ sensitivity = 0
 taylor = 0
 
 [QUANTIZING]
-int8 = 1
-fp16 = 1
-base = 1
+int8 = 0
+fp16 = 0
+base = 0
 
 [FILEFOLDERS]
 trt_caches = ./data/trt_caches
